# nutrimetrics

./: .gitignore  LICENSE  README.md  pyproject.toml
nutrimetrics/: __about__.py  __init__.py  cli.py  config.py  food_data_central.py  meals.py  nutrients.py  units.py  workbook.py
nutrimetrics/resources/: config.json
nutrimetrics/resources/dri/: ear-female.json  ear-male.json  rda-female.json  rda-male.json
nutrimetrics/resources/foods/: almond_170567.json  almond_butter_168588.json  almond_milk_2257045.json  apple_171688.json  apple_171689.json  apple_cider_vinegar_173469.json  apricot_171697.json  asparagus_168389.json  avocado_171705.json  balsamic_vinegar_172241.json  banana_173944.json  basil_172232.json  beef_ground_80-20_174036.json  beef_ground_90-10_174030.json  beetroot_169145.json  bell_pepper_green_2258588.json  bell_pepper_orange_2258591.json  bell_pepper_red_2258590.json  bell_pepper_yellow_2258589.json  black_bean_173734.json  blackberry_173946.json  blueberry_171711.json  brazil_nut_170569.json  brewed_coffee_171890.json  broccoli_170379.json  brussels_sprout_170383.json  butter_173430.json  cabbage_169975.json  cantaloupe_169092.json  carrot_170393.json  cauliflower_169986.json  cheddar_cheese_173414.json  cherry_171719.json  chia_seed_170554.json  chicken_breast_171077.json  chickpea_173756.json  chlorella_powder_1064099.json  cilantro_169997.json  cinnamon_171320.json  clementine_168195.json  (+95 more)
nutrimetrics/resources/samples/: bryan_johnson.json  eric_berg.json  foods.json  meal_plan.json  michael_b_jordan.json
